// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cdk stack creation for geofence collection service creates geofence collection policy for given group permissions 1`] = `
Object {
  "Mappings": Object {
    "RegionMapping": Object {
      "eu-west-2": Object {
        "locationServiceRegion": "eu-central-1",
      },
    },
  },
  "Outputs": Object {
    "Arn": Object {
      "Value": Object {
        "Fn::Sub": Array [
          "arn:aws:geo:\${region}:\${account}:geofence-collection/\${collectionName}",
          Object {
            "account": Object {
              "Ref": "AWS::AccountId",
            },
            "collectionName": Object {
              "Fn::GetAtt": Array [
                "CustomGeofenceCollection",
                "CollectionName",
              ],
            },
            "region": Object {
              "Fn::FindInMap": Array [
                "RegionMapping",
                Object {
                  "Ref": "AWS::Region",
                },
                "locationServiceRegion",
              ],
            },
          },
        ],
      },
    },
    "Name": Object {
      "Value": Object {
        "Fn::GetAtt": Array [
          "CustomGeofenceCollection",
          "CollectionName",
        ],
      },
    },
    "Region": Object {
      "Value": Object {
        "Fn::FindInMap": Array [
          "RegionMapping",
          Object {
            "Ref": "AWS::Region",
          },
          "locationServiceRegion",
        ],
      },
    },
  },
  "Parameters": Object {
    "authmockAuthResource123UserPoolId": Object {
      "Type": "String",
    },
    "authuserPoolGroupscollectionsAdminGroupRole": Object {
      "Type": "String",
    },
    "collectionName": Object {
      "Type": "String",
    },
    "dataProvider": Object {
      "Type": "String",
    },
    "env": Object {
      "Type": "String",
    },
    "isDefault": Object {
      "Type": "String",
    },
    "pricingPlan": Object {
      "Type": "String",
    },
  },
  "Resources": Object {
    "CustomGeofenceCollection": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomGeofenceCollectionLambdaCA3D002B",
            "Arn",
          ],
        },
        "collectionName": Object {
          "Fn::Join": Array [
            "-",
            Array [
              Object {
                "Ref": "collectionName",
              },
              Object {
                "Ref": "env",
              },
            ],
          ],
        },
        "dataSource": Object {
          "Ref": "dataProvider",
        },
        "env": Object {
          "Ref": "env",
        },
        "pricingPlan": Object {
          "Ref": "pricingPlan",
        },
        "region": Object {
          "Fn::FindInMap": Array [
            "RegionMapping",
            Object {
              "Ref": "AWS::Region",
            },
            "locationServiceRegion",
          ],
        },
      },
      "Type": "Custom::LambdaCallout",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomGeofenceCollectionLambdaCA3D002B": Object {
      "DependsOn": Array [
        "CustomGeofenceCollectionLambdaServiceRoleDefaultPolicy0A18B369",
        "CustomGeofenceCollectionLambdaServiceRole9040D551",
      ],
      "Properties": Object {
        "Code": Object {
          "ZipFile": "const response = require('cfn-response');
const aws = require('aws-sdk');
exports.handler = async (event, context) => {
  try {
    console.log('REQUEST RECEIVED:' + JSON.stringify(event));
    if (event.RequestType == 'Create') {
      const params = {
        CollectionName: event.ResourceProperties.collectionName,
        PricingPlan: event.ResourceProperties.pricingPlan
      };
      if (params.PricingPlan !== 'RequestBasedUsage') {
        params['PricingPlanDataSource'] = event.ResourceProperties.dataSource;
      }
      const locationClient = new aws.Location({ apiVersion: '2020-11-19', region: event.ResourceProperties.region });
      const res = await locationClient.createGeofenceCollection(params).promise();
      console.log('create resource response data' + JSON.stringify(res));
      if (res.CollectionName && res.CollectionArn) {
        await send(event, context, response.SUCCESS, res, params.CollectionName);
      } else {
        await send(event, context, response.FAILED, res, params.CollectionName);
      }
    }
    if (event.RequestType == 'Update') {
      const params = {
        CollectionName: event.ResourceProperties.collectionName,
        PricingPlan: event.ResourceProperties.pricingPlan
      };
      if (params.PricingPlan !== 'RequestBasedUsage') {
        params['PricingPlanDataSource'] = event.ResourceProperties.dataSource;
      }
      const locationClient = new aws.Location({ apiVersion: '2020-11-19', region: event.ResourceProperties.region });
      const res = await locationClient.updateGeofenceCollection(params).promise();
      console.log('update resource response data' + JSON.stringify(res));
      if (res.CollectionName) {
        await send(event, context, response.SUCCESS, res, params.CollectionName);
      } else {
        await send(event, context, response.FAILED, res, params.CollectionName);
      }
    }
    if (event.RequestType == 'Delete') {
      const params = {
        CollectionName: event.ResourceProperties.collectionName
      };
      const locationClient = new aws.Location({ apiVersion: '2020-11-19', region: event.ResourceProperties.region });
      const res = await locationClient.deleteGeofenceCollection(params).promise();
      console.log('delete resource response data' + JSON.stringify(res));
      await send(event, context, response.SUCCESS, res, params.CollectionName);
    }
  } catch (err) {
    console.log(err.stack);
    const res = { Error: err };
    await send(event, context, response.FAILED, res, event.ResourceProperties.collectionName);
    throw err;
  }
};

function send(event, context, status, data, physicalResourceId) {
  return new Promise(() => {
    response.send(event, context, status, data, physicalResourceId);
  });
}
",
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomGeofenceCollectionLambdaServiceRole9040D551",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomGeofenceCollectionLambdaServiceRole9040D551": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomGeofenceCollectionLambdaServiceRoleDefaultPolicy0A18B369": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "geo:CreateGeofenceCollection",
              "Effect": "Allow",
              "Resource": "*",
            },
            Object {
              "Action": Array [
                "geo:UpdateGeofenceCollection",
                "geo:DeleteGeofenceCollection",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Sub": Array [
                  "arn:aws:geo:\${region}:\${account}:geofence-collection/\${collectionName}",
                  Object {
                    "account": Object {
                      "Ref": "AWS::AccountId",
                    },
                    "collectionName": Object {
                      "Fn::Join": Array [
                        "-",
                        Array [
                          Object {
                            "Ref": "collectionName",
                          },
                          Object {
                            "Ref": "env",
                          },
                        ],
                      ],
                    },
                    "region": Object {
                      "Fn::FindInMap": Array [
                        "RegionMapping",
                        Object {
                          "Ref": "AWS::Region",
                        },
                        "locationServiceRegion",
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CustomGeofenceCollectionLambdaServiceRoleDefaultPolicy0A18B369",
        "Roles": Array [
          Object {
            "Ref": "CustomGeofenceCollectionLambdaServiceRole9040D551",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "collectionsAdminGeofenceCollectionPolicy": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "geo:GetGeofence",
                "geo:PutGeofence",
                "geo:BatchPutGeofence",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Sub": Array [
                  "arn:aws:geo:\${region}:\${account}:geofence-collection/\${collectionName}",
                  Object {
                    "account": Object {
                      "Ref": "AWS::AccountId",
                    },
                    "collectionName": Object {
                      "Fn::GetAtt": Array [
                        "CustomGeofenceCollection",
                        "CollectionName",
                      ],
                    },
                    "region": Object {
                      "Fn::FindInMap": Array [
                        "RegionMapping",
                        Object {
                          "Ref": "AWS::Region",
                        },
                        "locationServiceRegion",
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": Object {
          "Fn::Join": Array [
            "",
            Array [
              "collectionsAdmin",
              Object {
                "Fn::Join": Array [
                  "-",
                  Array [
                    Object {
                      "Ref": "collectionName",
                    },
                    Object {
                      "Ref": "env",
                    },
                  ],
                ],
              },
              "Policy",
            ],
          ],
        },
        "Roles": Array [
          Object {
            "Fn::Join": Array [
              "-",
              Array [
                Object {
                  "Ref": "authmockAuthResource123UserPoolId",
                },
                "collectionsAdminGroupRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`cdk stack creation for geofence collection service does not add geofence collection policy for empty group permissions 1`] = `
Object {
  "Mappings": Object {
    "RegionMapping": Object {
      "eu-west-2": Object {
        "locationServiceRegion": "eu-central-1",
      },
    },
  },
  "Outputs": Object {
    "Arn": Object {
      "Value": Object {
        "Fn::Sub": Array [
          "arn:aws:geo:\${region}:\${account}:geofence-collection/\${collectionName}",
          Object {
            "account": Object {
              "Ref": "AWS::AccountId",
            },
            "collectionName": Object {
              "Fn::GetAtt": Array [
                "CustomGeofenceCollection",
                "CollectionName",
              ],
            },
            "region": Object {
              "Fn::FindInMap": Array [
                "RegionMapping",
                Object {
                  "Ref": "AWS::Region",
                },
                "locationServiceRegion",
              ],
            },
          },
        ],
      },
    },
    "Name": Object {
      "Value": Object {
        "Fn::GetAtt": Array [
          "CustomGeofenceCollection",
          "CollectionName",
        ],
      },
    },
    "Region": Object {
      "Value": Object {
        "Fn::FindInMap": Array [
          "RegionMapping",
          Object {
            "Ref": "AWS::Region",
          },
          "locationServiceRegion",
        ],
      },
    },
  },
  "Parameters": Object {
    "authmockAuthResource123UserPoolId": Object {
      "Type": "String",
    },
    "collectionName": Object {
      "Type": "String",
    },
    "dataProvider": Object {
      "Type": "String",
    },
    "env": Object {
      "Type": "String",
    },
    "isDefault": Object {
      "Type": "String",
    },
    "pricingPlan": Object {
      "Type": "String",
    },
  },
  "Resources": Object {
    "CustomGeofenceCollection": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomGeofenceCollectionLambdaCA3D002B",
            "Arn",
          ],
        },
        "collectionName": Object {
          "Fn::Join": Array [
            "-",
            Array [
              Object {
                "Ref": "collectionName",
              },
              Object {
                "Ref": "env",
              },
            ],
          ],
        },
        "dataSource": Object {
          "Ref": "dataProvider",
        },
        "env": Object {
          "Ref": "env",
        },
        "pricingPlan": Object {
          "Ref": "pricingPlan",
        },
        "region": Object {
          "Fn::FindInMap": Array [
            "RegionMapping",
            Object {
              "Ref": "AWS::Region",
            },
            "locationServiceRegion",
          ],
        },
      },
      "Type": "Custom::LambdaCallout",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomGeofenceCollectionLambdaCA3D002B": Object {
      "DependsOn": Array [
        "CustomGeofenceCollectionLambdaServiceRoleDefaultPolicy0A18B369",
        "CustomGeofenceCollectionLambdaServiceRole9040D551",
      ],
      "Properties": Object {
        "Code": Object {
          "ZipFile": "const response = require('cfn-response');
const aws = require('aws-sdk');
exports.handler = async (event, context) => {
  try {
    console.log('REQUEST RECEIVED:' + JSON.stringify(event));
    if (event.RequestType == 'Create') {
      const params = {
        CollectionName: event.ResourceProperties.collectionName,
        PricingPlan: event.ResourceProperties.pricingPlan
      };
      if (params.PricingPlan !== 'RequestBasedUsage') {
        params['PricingPlanDataSource'] = event.ResourceProperties.dataSource;
      }
      const locationClient = new aws.Location({ apiVersion: '2020-11-19', region: event.ResourceProperties.region });
      const res = await locationClient.createGeofenceCollection(params).promise();
      console.log('create resource response data' + JSON.stringify(res));
      if (res.CollectionName && res.CollectionArn) {
        await send(event, context, response.SUCCESS, res, params.CollectionName);
      } else {
        await send(event, context, response.FAILED, res, params.CollectionName);
      }
    }
    if (event.RequestType == 'Update') {
      const params = {
        CollectionName: event.ResourceProperties.collectionName,
        PricingPlan: event.ResourceProperties.pricingPlan
      };
      if (params.PricingPlan !== 'RequestBasedUsage') {
        params['PricingPlanDataSource'] = event.ResourceProperties.dataSource;
      }
      const locationClient = new aws.Location({ apiVersion: '2020-11-19', region: event.ResourceProperties.region });
      const res = await locationClient.updateGeofenceCollection(params).promise();
      console.log('update resource response data' + JSON.stringify(res));
      if (res.CollectionName) {
        await send(event, context, response.SUCCESS, res, params.CollectionName);
      } else {
        await send(event, context, response.FAILED, res, params.CollectionName);
      }
    }
    if (event.RequestType == 'Delete') {
      const params = {
        CollectionName: event.ResourceProperties.collectionName
      };
      const locationClient = new aws.Location({ apiVersion: '2020-11-19', region: event.ResourceProperties.region });
      const res = await locationClient.deleteGeofenceCollection(params).promise();
      console.log('delete resource response data' + JSON.stringify(res));
      await send(event, context, response.SUCCESS, res, params.CollectionName);
    }
  } catch (err) {
    console.log(err.stack);
    const res = { Error: err };
    await send(event, context, response.FAILED, res, event.ResourceProperties.collectionName);
    throw err;
  }
};

function send(event, context, status, data, physicalResourceId) {
  return new Promise(() => {
    response.send(event, context, status, data, physicalResourceId);
  });
}
",
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomGeofenceCollectionLambdaServiceRole9040D551",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomGeofenceCollectionLambdaServiceRole9040D551": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomGeofenceCollectionLambdaServiceRoleDefaultPolicy0A18B369": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "geo:CreateGeofenceCollection",
              "Effect": "Allow",
              "Resource": "*",
            },
            Object {
              "Action": Array [
                "geo:UpdateGeofenceCollection",
                "geo:DeleteGeofenceCollection",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Sub": Array [
                  "arn:aws:geo:\${region}:\${account}:geofence-collection/\${collectionName}",
                  Object {
                    "account": Object {
                      "Ref": "AWS::AccountId",
                    },
                    "collectionName": Object {
                      "Fn::Join": Array [
                        "-",
                        Array [
                          Object {
                            "Ref": "collectionName",
                          },
                          Object {
                            "Ref": "env",
                          },
                        ],
                      ],
                    },
                    "region": Object {
                      "Fn::FindInMap": Array [
                        "RegionMapping",
                        Object {
                          "Ref": "AWS::Region",
                        },
                        "locationServiceRegion",
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CustomGeofenceCollectionLambdaServiceRoleDefaultPolicy0A18B369",
        "Roles": Array [
          Object {
            "Ref": "CustomGeofenceCollectionLambdaServiceRole9040D551",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;
